@@ -10,7 +10,7 @@ MODULE = FLTK::Group               PACKAGE = FLTK::Group
 
 =for author Sanko Robinson <sanko@cpan.org> - http://sankorobinson.com/
 
-=for version 0.532006
+=for version 0.532007
 
 =for git $Id$
 
@@ -151,7 +151,7 @@ Searches the children for C<widget>, returns the index of C<widget> or of a
 parent of C<widget> that is a L<C<child()>|/"child"> of this. Returns
 L<C<children()>|/"children"> if the widget is undef or not found.
 
-=for apidoc |||add|FLTK::Widget * widget|
+=for apidoc NA||FLTK::Widget * widget|add|FLTK::Widget * widget|
 
 The widget is removed from its current group (if any) and then added to the
 end of this group.
@@ -161,14 +161,24 @@ end of this group.
 int
 fltk::Group::find ( fltk::Widget * widget )
 
-void
+void *
 fltk::Group::add( fltk::Widget * widget )
+    PREINIT:
+        const char * _class;
+    PPCODE:
+        THIS->add( widget );
+        _class = (( WidgetSubclass<fltk::Widget> * ) widget)->bless_class( );
+        if (widget != NULL) {
+            ST(0) = sv_newmortal();
+            sv_setref_pv(ST(0), (_class?_class:"FLTK::Widget"), widget); /* -- hand rolled -- */
+            XSRETURN(1);
+        }
 
-=for apidoc |||insert|FLTK::Widget * widget|int index|
+=for apidoc NA||FLTK::Widget * widget|insert|FLTK::Widget * widget|int index|
 
 Inserts C<widget> in the <index>th position of this group's stack.
 
-=for apidoc |||insert|FLTK::Widget * widget|FLTK::Widget * before|
+=for apidoc NA||FLTK::Widget * widget|insert|FLTK::Widget * widget|FLTK::Widget * before|
 
 This does L<C<$G-E<gt>insert($widget, $G-E<gt>find($beforethis))>|/"insert">.
 This will append the widget if C<$beforethis> is not in the group.
@@ -180,9 +190,23 @@ fltk::Group::insert( fltk::Widget * widget, before )
     CASE: SvIOK( ST(2) )
         int before
         C_ARGS: * widget, before
+    POSTCALL:
+        const char * _class = (( WidgetSubclass<fltk::Widget> * ) widget)->bless_class( );
+        if (widget != NULL) {
+            ST(0) = sv_newmortal();
+            sv_setref_pv(ST(0), (_class?_class:"FLTK::Widget"), widget); /* -- hand rolled -- */
+            XSRETURN(1);
+        }
     CASE:
         fltk::Widget * before
         C_ARGS: * widget, before
+    POSTCALL:
+        const char * _class = (( WidgetSubclass<fltk::Widget> * ) widget)->bless_class( );
+        if (widget != NULL) {
+            ST(0) = sv_newmortal();
+            sv_setref_pv(ST(0), (_class?_class:"FLTK::Widget"), widget); /* -- hand rolled -- */
+            XSRETURN(1);
+        }
 
 =for apidoc |||remove|int index|
 
@@ -214,11 +238,11 @@ See L<C<clear())>|/"clear">
 void
 fltk::Group::remove_all( )
 
-=for apidoc |||replace|int index|FLTK::Widget * widget_b|
+=for apidoc NA||FLTK::Widget * widget_b|replace|int index|FLTK::Widget * widget_b|
 
 Remove the C<index>th widget and inserts C<widget_b> in its place.
 
-=for apidoc |||replace|FLTK::Widget * widget|FLTK::Widget * widget_b|
+=for apidoc NA||FLTK::Widget * widget_b|replace|FLTK::Widget * widget|FLTK::Widget * widget_b|
 
 Remove the C<widget> and inserts C<widget_b> in its place.
 
@@ -229,9 +253,23 @@ fltk::Group::replace( widget, fltk::Widget * widget_b )
     CASE: SvIOK( ST(1) )
         int widget
         C_ARGS:   widget, * widget_b
+        POSTCALL:
+            const char * _class = (( WidgetSubclass<fltk::Widget> * ) widget_b)->bless_class( );
+            if (widget_b != NULL) {
+                ST(0) = sv_newmortal();
+                sv_setref_pv(ST(0), (_class?_class:"FLTK::Widget"), widget_b); /* -- hand rolled -- */
+                XSRETURN(1);
+            }
     CASE:
         fltk::Widget * widget
         C_ARGS: * widget, * widget_b
+        POSTCALL:
+            const char * _class = (( WidgetSubclass<fltk::Widget> * ) widget_b)->bless_class( );
+            if (widget_b != NULL) {
+                ST(0) = sv_newmortal();
+                sv_setref_pv(ST(0), (_class?_class:"FLTK::Widget"), widget_b); /* -- hand rolled -- */
+                XSRETURN(1);
+            }
 
 =for apidoc |||swap|int indexA|int indexB|
 
